--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "webpack": "^5.24.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "ract": "^0.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
