--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.2.0",
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.2",
