Loading Images & Injecting into HTML Page

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     [
-      "@babel/preset-env",{
+      "@babel/preset-env",
+      {
         "targets": {
           "browsers": ["> 1%", "last 2 versions"]
         }
@@ -9,7 +10,7 @@
     ],
     "@babel/preset-react"
   ],
-  "plagins": [
-    "@babel/plagin-proposal-class-properties"
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
   ]
 }
